# Daedalus

./: .gitignore  README.md  pom.xml
base/: pom.xml
daedalus-cli/: pom.xml
daedalus-cli/src/main/java/: module-info.java
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-cli/: pom.xml
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-compiler/: pom.xml
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-compiler/protoc-bridge/: CMakeLists.txt  build.bat  build.sh  protoc_bridge.cpp
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-google-support/: pom.xml
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-processor/: pom.xml
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-processor/test/: pom.xml
daedalus-datatype/daedalus-protobuf/daedalus-protobuf-typesystem/: pom.xml
daedalus-json/: pom.xml
daedalus-json/src/main/java/: module-info.java
daedalus-processor/: pom.xml
daedalus-processor/src/main/java/: module-info.java
daedalus-protobuf/: pom.xml
daedalus-protobuf/daedalus-protobuf-base/: pom.xml
daedalus-protobuf/daedalus-protobuf-cli/: pom.xml
daedalus-protobuf/daedalus-protobuf-compiler/: pom.xml
daedalus-protobuf/daedalus-protobuf-google-support/: pom.xml
daedalus-protobuf/daedalus-protobuf-parser/: pom.xml
daedalus-protobuf/daedalus-protobuf-processor/: pom.xml
daedalus-protobuf/daedalus-protobuf-processor/test/: pom.xml
daedalus-protobuf/daedalus-protobuf-typesystem/: pom.xml
daedalus-typesystem/: pom.xml
daedalus-typesystem/src/main/java/: module-info.java
(+655 files in other folders)
